--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -184,6 +184,10 @@
       height: 13%;
       top: 37%;
       outline: none;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     &-button {
