--- a/client/src/styles/_partials/_contact.scss
+++ b/client/src/styles/_partials/_contact.scss
@@ -163,13 +163,44 @@
       display: flex;
       justify-content: center;
       align-items: flex-end;
+      background: url('/assets/images/vancouver-skyline.jpg');
+      background-position: center;
+      background-size: cover;
+      border-radius: 450px;
+      overflow: hidden;
+      width: 100%;
+      height: 37.75rem;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      max-width: 30rem;
+      max-height: 30rem;
+      height: 100%;
+
+      &-wrapper {
+        width: 100%;
+        padding-bottom: 100%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+
+        @include desktop {
+          padding-bottom: 0;
+          width: 37.75rem;
+          height: 37.75rem;
+        }
+      }
 
       @include desktop {
-        width: 37.75rem;
-        height: 37.75rem;
-        margin-top: 4rem;
+        width: 97%;
+        height: 97%;
+        max-width: none;
+        max-height: none;
+        margin-top: 2rem;
         margin-left: 0;
         margin-right: 2rem;
+        // position: static;
       }
     }
 
