--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1678,13 +1678,49 @@
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+  background: url("/assets/images/vancouver-skyline.jpg");
+  background-position: center;
+  background-size: cover;
+  border-radius: 450px;
+  overflow: hidden;
+  width: 100%;
+  height: 37.75rem;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  max-width: 30rem;
+  max-height: 30rem;
+  height: 100%;
+}
+
+.contact__map-wrapper-wrapper {
+  width: 100%;
+  padding-bottom: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (min-width: 1440px) {
+  .contact__map-wrapper-wrapper {
+    padding-bottom: 0;
+    width: 37.75rem;
+    height: 37.75rem;
+  }
 }
 
 @media (min-width: 1440px) {
   .contact__map-wrapper {
-    width: 37.75rem;
-    height: 37.75rem;
-    margin-top: 4rem;
+    width: 97%;
+    height: 97%;
+    max-width: none;
+    max-height: none;
+    margin-top: 2rem;
     margin-left: 0;
     margin-right: 2rem;
   }
