--- a/client/src/styles/_partials/_home-about.scss
+++ b/client/src/styles/_partials/_home-about.scss
@@ -71,15 +71,20 @@
 
     @include desktop {
       font-size: 2.5rem;
+      margin-left: 3rem;
     }
 
     &-container {
-      width: 13.5rem;
+      width: 15.5rem;
       margin-left: auto;
       margin-right: auto;
       height: auto;
       padding-left: 1rem;
       z-index: 1;
+
+      @include tablet {
+        width: 18.5rem;
+      }
 
       @include desktop {
         position: absolute;
@@ -88,7 +93,7 @@
         right: 0;
         margin: auto;
         padding: 0;
-        width: 18rem;
+        width: 30rem;
       }
     }
   }
