--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -45,17 +45,20 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
 
     @include desktop {
+      flex-wrap: wrap;
       flex-direction: row;
-      justify-content: space-between;
+      gap: 4rem;
+      justify-content: center;
     }
   }
 
   &__product-wrapper {
     @include desktop {
-      width: 23%;
+      width: 30%;
+      max-width: 33rem;
     }
   }
 
