--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -63,8 +63,8 @@
   }
 
   &__product-category-img {
-    height: auto;
-    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transform: scale(1.2);
     transition: all 0.3s;
 
@@ -75,6 +75,7 @@
     &-container {
       overflow: hidden;
       width: 100%;
+      height: 19rem;
 
       &:hover img {
         transform: scale(1);
@@ -82,6 +83,7 @@
       }
     }
   }
+
   &__product-category-descr {
     width: 80%;
     font-family: "Circular Std Black";
@@ -95,7 +97,7 @@
     }
 
     @include desktop {
-      font-size: 1rem;
+      font-size: 1.2rem;
       width: 90%;
     }
   }
