--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -653,6 +653,7 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    padding-top: 5rem;
   }
 }
 
