--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -77,6 +77,7 @@
       overflow: hidden;
       width: 100%;
       height: 19rem;
+      text-align: center;
 
       &:hover img {
         transform: scale(1);
@@ -209,7 +210,13 @@
         left: 0;
         width: 3rem;
         height: 4rem;
-        cursor: pointer;
+        position: absolute;
+        z-index: 2;
+
+        @include desktop {
+          cursor: pointer;
+          position: static;
+        }
 
         &-icon {
           background: url("/assets/icons/left-arrow.png");
@@ -219,6 +226,7 @@
           width: 35px;
           height: 35px;
           margin: 0 auto 0 0;
+          transform: translateX(-.4rem);
         }
       }
 
@@ -235,6 +243,12 @@
         width: 3rem;
         height: 4rem;
         cursor: pointer;
+        position: absolute;
+
+        @include desktop {
+          cursor: pointer;
+          position: static;
+        }
 
         &-icon {
           background: url("/assets/icons/right-arrow.png");
@@ -256,10 +270,10 @@
   }
 
   &__carousel {
-    max-height: 70vh;
-    min-height: 70vh;
-    height: 70vh;
-    width: 70vw;
+    max-height: 100vh;
+    min-height: 100vh;
+    height: 100vh;
+    width: 100vw;
     background: white;
     position: relative;
     display: flex;
@@ -267,17 +281,36 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    border-radius: 10px;
     z-index: 12;
+
+    @include desktop {
+      max-height: 70vh;
+      min-height: 70vh;
+      height: 70vh;
+      width: 70vw;
+      background: white;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      border-radius: 10px;
+    }
 
     &-buttons-slides-wrapper {
       display: flex;
       align-items: center;
-      width: 85%;
-      max-width: 91rem;
-      height: 85%;
+      width: 100%;
+      height: 100%;
       position: relative;
       overflow: hidden;
+
+      @include desktop {
+        width: 85%;
+        max-width: 91rem;
+        height: 85%;
+      }
     }
 
     &-slides-wrapper {
