--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -729,6 +729,7 @@
   overflow: hidden;
   width: 100%;
   height: 19rem;
+  text-align: center;
 }
 
 .products__product-category-img-container:hover img {
@@ -893,7 +894,15 @@
   left: 0;
   width: 3rem;
   height: 4rem;
-  cursor: pointer;
+  position: absolute;
+  z-index: 2;
+}
+
+@media (min-width: 1440px) {
+  .products__slider-button-left {
+    cursor: pointer;
+    position: static;
+  }
 }
 
 .products__slider-button-left-icon {
@@ -904,6 +913,8 @@
   width: 35px;
   height: 35px;
   margin: 0 auto 0 0;
+  -webkit-transform: translateX(-0.4rem);
+          transform: translateX(-0.4rem);
 }
 
 .products__slider-button-right {
@@ -915,6 +926,14 @@
   width: 3rem;
   height: 4rem;
   cursor: pointer;
+  position: absolute;
+}
+
+@media (min-width: 1440px) {
+  .products__slider-button-right {
+    cursor: pointer;
+    position: static;
+  }
 }
 
 .products__slider-button-right-icon {
@@ -932,10 +951,10 @@
 }
 
 .products__carousel {
-  max-height: 70vh;
-  min-height: 70vh;
-  height: 70vh;
-  width: 70vw;
+  max-height: 100vh;
+  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
   background: white;
   position: relative;
   display: -webkit-box;
@@ -952,8 +971,33 @@
       -ms-flex-align: center;
           align-items: center;
   overflow: hidden;
-  border-radius: 10px;
   z-index: 12;
+}
+
+@media (min-width: 1440px) {
+  .products__carousel {
+    max-height: 70vh;
+    min-height: 70vh;
+    height: 70vh;
+    width: 70vw;
+    background: white;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    overflow: hidden;
+    border-radius: 10px;
+  }
 }
 
 .products__carousel-buttons-slides-wrapper {
@@ -963,11 +1007,18 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 85%;
-  max-width: 91rem;
-  height: 85%;
+  width: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden;
+}
+
+@media (min-width: 1440px) {
+  .products__carousel-buttons-slides-wrapper {
+    width: 85%;
+    max-width: 91rem;
+    height: 85%;
+  }
 }
 
 .products__carousel-slides-wrapper {
