Adjusted min-height for products section now that we have more items in there

--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -18,7 +18,7 @@
 
     @include desktop {
       max-width: 85%;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
