Modified some classes

--- a/client/src/styles/_partials/_services.scss
+++ b/client/src/styles/_partials/_services.scss
@@ -82,186 +82,11 @@
     margin-top: 3rem;
 
     @include desktop {
-      position: absolute;
-      width: 40%;
+      width: 50%;
       margin-top: 1rem;
       display: block;
-      left: 50%;
-      transform: translate(-50%);
       z-index: 1;
-    }
-  }
-
-  &__clusters-wrapper {
-    @include desktop {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 35rem;
-    }
-  }
-
-  //   CLUSTER 1
-
-  &__cluster1-content {
-    max-width: 40rem;
-    margin-left: auto;
-    margin-right: auto;
-
-    @include desktop {
-      max-width: 27rem;
-      z-index: 2;
-    }
-  }
-
-  &__cluster1-imgs-container {
-    width: 100%;
-    padding-top: 100%;
-    position: relative;
-  }
-
-  &__cluster1-wrapper {
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-  }
-
-  &__cluster1-img1 {
-    width: 100%;
-
-    &-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      width: 35%;
-      z-index: 3;
-    }
-  }
-
-  // SEE IF THIS CAN BE POSITIONED BETTER BY THE END
-  &__cluster1-handshake-bg {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url("/assets/images/consultoria_03.png");
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;
-    width: 70%;
-    height: 70%;
-    left: 30%;
-    margin-left: -50px;
-    top: 15%;
-    z-index: 1;
-    border-radius: 150px;
-  }
-
-  &__cluster1-img2 {
-    width: 100%;
-
-    &-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      width: 35%;
-      z-index: 3;
-    }
-  }
-
-  &__cluster1-text-wrapper {
-    width: 87%;
-    margin: 1rem auto 3rem auto;
-    font-size: $text-font-size-mobile;
-  }
-
-  &__cluster1-subtitle {
-    font-family: "Circular Std Black";
-    color: $text-color;
-    margin-bottom: 8rem;
-    margin-top: 1.5rem;
-
-    @include tablet {
-      font-size: 1.625rem;
-    }
-  }
-
-  &__cluster1-paragraph {
-    color: $terranova-gray;
-    margin-top: 1rem;
-  }
-
-  // CLUSTER 2
-
-  &__cluster2-content {
-    max-width: 40rem;
-    margin-left: auto;
-    margin-right: auto;
-
-    @include desktop {
-      max-width: 27rem;
-      z-index: 2;
-    }
-  }
-
-  &__cluster2-imgs-container {
-    width: 100%;
-    padding-top: 100%;
-    position: relative;
-  }
-
-  &__cluster2-wrapper {
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-  }
-
-  &__cluster2-img1 {
-    width: 100%;
-
-    &-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      width: 35%;
-      z-index: 3;
-    }
-  }
-
-  &__cluster2-trailer-bg {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url("/assets/images/logistica_03.png");
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;
-    width: 70%;
-    height: 70%;
-    left: 30%;
-    margin-left: -50px;
-    top: 15%;
-    z-index: 1;
-    border-radius: 150px;
-  }
-
-  &__cluster2-img2 {
-    width: 100%;
-
-    &-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      width: 35%;
-      z-index: 3;
+      margin: auto;
     }
   }
 }
