--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -466,6 +466,7 @@
 @media (min-width: 1440px) {
   .home-about__about-text {
     width: auto;
+    z-index: 1;
     max-width: 50rem;
   }
 }
@@ -1228,241 +1229,12 @@
 
 @media (min-width: 1440px) {
   .services__hero-img {
-    position: absolute;
-    width: 40%;
+    width: 50%;
     margin-top: 1rem;
     display: block;
-    left: 50%;
-    -webkit-transform: translate(-50%);
-            transform: translate(-50%);
     z-index: 1;
+    margin: auto;
   }
-}
-
-@media (min-width: 1440px) {
-  .services__clusters-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-top: 35rem;
-  }
-}
-
-.services__cluster1-content {
-  max-width: 40rem;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media (min-width: 1440px) {
-  .services__cluster1-content {
-    max-width: 27rem;
-    z-index: 2;
-  }
-}
-
-.services__cluster1-imgs-container {
-  width: 100%;
-  padding-top: 100%;
-  position: relative;
-}
-
-.services__cluster1-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-
-.services__cluster1-img1 {
-  width: 100%;
-}
-
-.services__cluster1-img1-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  width: 35%;
-  z-index: 3;
-}
-
-.services__cluster1-handshake-bg {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: url("/assets/images/consultoria_03.png");
-  background-position: center;
-  background-size: cover;
-  overflow: hidden;
-  width: 70%;
-  height: 70%;
-  left: 30%;
-  margin-left: -50px;
-  top: 15%;
-  z-index: 1;
-  border-radius: 150px;
-}
-
-.services__cluster1-img2 {
-  width: 100%;
-}
-
-.services__cluster1-img2-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  width: 35%;
-  z-index: 3;
-}
-
-.services__cluster1-text-wrapper {
-  width: 87%;
-  margin: 1rem auto 3rem auto;
-  font-size: 1.2rem;
-}
-
-.services__cluster1-subtitle {
-  font-family: "Circular Std Black";
-  color: #404040;
-  margin-bottom: 8rem;
-  margin-top: 1.5rem;
-}
-
-@media (min-width: 768px) {
-  .services__cluster1-subtitle {
-    font-size: 1.625rem;
-  }
-}
-
-.services__cluster1-paragraph {
-  color: #686868;
-  margin-top: 1rem;
-}
-
-.services__cluster2-content {
-  max-width: 40rem;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media (min-width: 1440px) {
-  .services__cluster2-content {
-    max-width: 27rem;
-    z-index: 2;
-  }
-}
-
-.services__cluster2-imgs-container {
-  width: 100%;
-  padding-top: 100%;
-  position: relative;
-}
-
-.services__cluster2-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-
-.services__cluster2-img1 {
-  width: 100%;
-}
-
-.services__cluster2-img1-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  width: 35%;
-  z-index: 3;
-}
-
-.services__cluster2-trailer-bg {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: url("/assets/images/logistica_03.png");
-  background-position: center;
-  background-size: cover;
-  overflow: hidden;
-  width: 70%;
-  height: 70%;
-  left: 30%;
-  margin-left: -50px;
-  top: 15%;
-  z-index: 1;
-  border-radius: 150px;
-}
-
-.services__cluster2-img2 {
-  width: 100%;
-}
-
-.services__cluster2-img2-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  width: 35%;
-  z-index: 3;
 }
 
 @font-face {
@@ -2102,6 +1874,9 @@
 
 .footer__logo {
   margin-bottom: 1rem;
+  width: 62px;
+  height: 43px;
+  margin: auto;
 }
 
 .footer__social-wrapper {
