--- a/client/src/styles/_partials/_services.scss
+++ b/client/src/styles/_partials/_services.scss
@@ -53,8 +53,29 @@
     }
 
     @include desktop {
-      width: 60%;
+      width: 90%;
       font-size: $subtitle-font-size-desktop;
+    }
+  }
+
+  &__text {
+    @include desktop {
+      width: auto;
+      z-index: 1;
+      max-width: 60rem;
+    }
+
+    &-paragraph {
+      line-height: 1.5rem;
+      margin-bottom: 1.3rem;
+      font-size: 1.3rem;
+
+      &-wrapper {
+        font-family: "Circular Std Book";
+        width: 75%;
+        margin-left: 0.8rem;
+        font-size: $paragraph-font-size-mobile;
+      }
     }
   }
 
