--- a/client/src/styles/_partials/_services.scss
+++ b/client/src/styles/_partials/_services.scss
@@ -110,4 +110,59 @@
       margin: auto;
     }
   }
+
+  &__cards-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    @include desktop {
+      flex-direction: row;
+      justify-content: center;
+      margin: 5rem 0;
+    }
+  }
+
+  &__card {
+    width: 100%;
+    max-width: 23rem;
+    height: 25rem;
+    background-color: $footer-bg-color;
+    border-radius: 5px;
+    overflow: hidden;
+
+    &-top-wrapper {
+      height: 60%;
+      width: 100%;
+    }
+
+    &-img {
+      width: 100%;
+      height: 100%;
+      background-position: bottom;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
+    &-bottom-wrapper {
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    &-title {
+      font-family: "Circular Std Black";
+      font-size: 1.4rem;
+      display: block;
+      border-bottom: 2px solid $terranova-orange;
+      padding: 0 .5rem .1rem 0;
+      width: fit-content;
+    }
+
+    &-subtitle {
+      font-size: 1.1rem;
+    }
+  }
 }
