--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1258,6 +1258,80 @@
   }
 }
 
+.services__cards-wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2rem;
+}
+
+@media (min-width: 1440px) {
+  .services__cards-wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 5rem 0;
+  }
+}
+
+.services__card {
+  width: 100%;
+  max-width: 23rem;
+  height: 25rem;
+  background-color: #f6f6f6;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.services__card-top-wrapper {
+  height: 60%;
+  width: 100%;
+}
+
+.services__card-img {
+  width: 100%;
+  height: 100%;
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.services__card-bottom-wrapper {
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+.services__card-title {
+  font-family: "Circular Std Black";
+  font-size: 1.4rem;
+  display: block;
+  border-bottom: 2px solid #fc6414;
+  padding: 0 .5rem .1rem 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.services__card-subtitle {
+  font-size: 1.1rem;
+}
+
 @font-face {
   font-family: "Circular Std Black";
   src: url(/assets/fonts/CircularStd-Black.otf);
