Adjusted styling for tablet

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1270,12 +1270,14 @@
   gap: 2rem;
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 768px) {
   .services__cards-wrapper {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
