--- a/client/src/styles/_partials/_services.scss
+++ b/client/src/styles/_partials/_services.scss
@@ -117,8 +117,9 @@
     flex-direction: column;
     gap: 2rem;
 
-    @include desktop {
+    @include tablet {
       flex-direction: row;
+      flex-wrap: wrap;
       justify-content: center;
       margin: 5rem 0;
     }
