--- a/client/src/styles/_partials/_services.scss
+++ b/client/src/styles/_partials/_services.scss
@@ -115,12 +115,13 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 2rem;
 
     @include tablet {
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: center;
       margin: 5rem 0;
     }
   }
